# pnl-app

./: .dockerignore  .gitignore  Dockerfile.ui  README.md  init_position.json  pyproject.toml  requirements-ui.txt  run.py  setup.cfg  web-ui.py
pnlkit/: __init__.py  engine.py  io.py  models.py  results.py  strategies.py  types.py  viz.py
