[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pnlkit"
version = "0.1.0"
description = "PnL calculation toolkit (FIFO/LIFO, long/short)"
authors = [{name = "Vladimir Shilov"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.23",
    "matplotlib>=3.7",
]

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "pnlkit/__init__.py:F401",
]
